discussion/kv_engine/158631/158631_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: disable checkpoints

Change-Id: Ia46ed04c5ecf2ec5252ce2329f75552d1a41deb2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2021-08-04 16:48:41.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-04 16:57:46.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38322/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(2106): error C2065: "keySlice": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38322/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11086/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13: error: use of undeclared identifier "keySlice" [clang-diagnostic-error]
            keySlice = {reinterpret_cast<const char*>(collectionKey.data()),
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2109:39: error: use of undeclared identifier "keySlice" [clang-diagnostic-error]
            auto key = makeDiskDocKey(keySlice);
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11086/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: use of undeclared identifier "keySlice" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11086/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32680/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: use of undeclared identifier "keySlice"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/712/ : FAILURE

Compile error at [2021-08-04T16:49:53.415Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: use of undeclared identifier "keySlice"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/712/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/694/ : FAILURE

Compile error at [2021-08-04T16:56:34.012Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: ?keySlice? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/694/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13225/ : FAILURE

Compile error at [2021-08-04T16:49:49.183Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: use of undeclared identifier "keySlice"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12869/ : FAILURE

Compile error at [2021-08-04T16:50:46.713Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: ?keySlice? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11797/ : FAILURE

Compile error at [2021-08-04T16:51:17.192Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: use of undeclared identifier "keySlice"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11797/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20765/ : FAILURE

Compile error at [2021-08-04T16:50:30.536Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2106:13:
error: use of undeclared identifier "keySlice"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20765/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9766/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12681/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
